# jarvis_v2

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: complete.md  idea.md  remember.md  research-deep.md  roadmap.md  search.md  stats.md
.claude/skills/codex-quests/: SKILL.md
.claude/skills/create-quest/: SKILL.md
.claude/skills/grok-super/: SKILL.md
.claude/skills/review-quest/: SKILL.md
.github/workflows/: ci.yml
config/: settings.py  supervisor.conf
docs/research/: langgraph-neo4j-pgvector-deep-research.md
jarvis/: __init__.py
jarvis/agents/: __init__.py  instagram.py  newsletter.py  seo_blog.py  tiktok.py  trading_agent.py  twitter.py  youtube.py
jarvis/api/: __init__.py  admin.py  server.py
jarvis/core/: __init__.py  checkpointer.py  confidence.py  graph_memory.py  guardrails.py  knowledge_graph.py  mandate.py  memory.py  router.py  state.py
jarvis/graphs/: __init__.py  __main___content.py  __main___revenue.py  __main___trading.py  confidence.py  content.py  revenue.py  trading.py
jarvis/tools/: __init__.py  content.py  search.py  trading.py
jarvis/workers/: __init__.py  base.py  health.py  learning.py  research.py  trading.py
scripts/: backfill_neo4j.py  setup.sh
tests/: smoke_graphs.py
tests/integration/: test_tier_e2e.py
tests/unit/: test_confidence.py  test_core_state.py  test_graphs_revenue.py  test_llm_router.py
